POSIX SHM without initialization

--- a/master/CMakeLists.txt
+++ b/master/CMakeLists.txt
@@ -17,10 +17,7 @@ add_executable(
 	${sources}
 	)
 
-#target_link_libraries(
-#	${CMAKE_PROJECT_NAME}
-#	tcpserver
-#	${LUA_LIB}
-#	Threads::Threads
-#	mysqlcppconn
-#)
+target_link_libraries(
+	master
+	rt
+)
